# admm-elastic

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindGLFW.cmake  FindMKL.cmake
samples/: CMakeLists.txt  singlenode.cpp  singletet.cpp
samples/data/: box768.ele  box768.node  bunny_1124.ele  bunny_1124.node  bunny_2250.ele  bunny_2250.node  bunny_closed.ele  bunny_closed.node  sphere.ele  sphere.node  torus.ele  torus.node
samples/sca2016/: CMakeLists.txt  beams.cpp  bunnyexpand.cpp  trianglestrain.cpp
samples/tests/: CMakeLists.txt  test_convergence.cpp  test_lineartet.cpp  test_ncmcgs.cpp
samples/tvcg2017/: CMakeLists.txt  boxes.cpp  signorini.cpp  stretched_beams.cpp  torus.cpp
samples/utils/: AddMeshes.hpp  Application.hpp  make_video.sh
src/: Collider.hpp  ConstraintSet.hpp  DynamicObject.hpp  EnergyTerm.hpp  ExplicitForce.cpp  ExplicitForce.hpp  FastSVD.hpp  LinearSolver.hpp  NodalMultiColorGS.hpp  PassiveObject.hpp  Solver.cpp  Solver.hpp  SolverLog.hpp  SpringEnergyTerm.hpp  TetEnergyTerm.cpp  TetEnergyTerm.hpp  TriEnergyTerm.cpp  TriEnergyTerm.hpp  UzawaCG.hpp  XuSpline.hpp
src/collision/: CollisionCylinder.cpp  CollisionCylinder.hpp  CollisionFloor.cpp  CollisionFloor.hpp  CollisionShape.hpp  CollisionSphere.cpp  CollisionSphere.hpp
src/system/: AnchorForce.cpp  AnchorForce.hpp  BendForce.cpp  BendForce.hpp  CollisionForce.cpp  CollisionForce.hpp  ExplicitForce.cpp  ExplicitForce.hpp  Force.cpp  Force.hpp  System.cpp  System.hpp  TetForce.cpp  TetForce.hpp  TriangleForce.cpp  TriangleForce.hpp
